# rust-date-parser-js

./: Cargo.toml  README.md  package.json
js/: index.js  index.test.js
pkg/: README.md  chrono_parse_rfc3339.d.ts  chrono_parse_rfc3339.js  chrono_parse_rfc3339_bg.d.ts  chrono_parse_rfc3339_bg.wasm  package.json
src/: lib.rs
