# You must change these to your own details.
[package]
name = "chrono-parse-rfc3339"
description = "nodejs microsecond date parser"
version = "0.1.2"
authors = ["Lorenzo Mangani <lorenzo.mangani@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3

[features]
#default = ["wee_alloc"]
#stdweb = [ "instant/stdweb" ]
#wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
wasm-bindgen = "^0.2.79"
js-sys = "0.3.56"
chrono = { version = "0.4", features = ["wasmbind", "js-sys"] }
#instant = { version = "0.1", features = [ "stdweb" ] }
web-sys = { version = "0.3.56", features = ["Window", "Performance", "PerformanceTiming"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
#wee_alloc = { version = "0.4", optional = true }

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1"
wasm-bindgen-futures = "0.3"
